# comfyui-character-mcp

./: .gitignore  README.md  pyproject.toml
presets/: example_avatar.preset.json  example_avatar.workflow.json  example_hero.preset.json  example_hero.workflow.json
presets/example/: preset.json  workflow.json
src/comfyui_character_mcp/: comfyui_client.py  presets.py  server.py  vocabulary.py
vocabularies/: expressions.json
